tests/baselines/reference/objectLitTargetTypeCallSite.errors.txt
tests/cases/compiler/objectLitTargetTypeCallSite.ts(5,9): error TS2345: Argument of type '{ a: boolean; b: string; }' is not assignable to parameter of type '{ a: number; b: string; }'.


==== tests/cases/compiler/objectLitTargetTypeCallSite.ts (1 errors) ====
    function process( x: {a:number; b:string;}) {
    	return x.a;
    }
    
    process({a:true,b:"y"});
            ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ a: boolean; b: string; }' is not assignable to parameter of type '{ a: number; b: string; }'.